<resources>
    <string name="app_name">Object-Detect-App</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!-- 主界面文本 -->
    <string name="txt_main_content">一款支持实时、图片、视频的目标检测APP！</string>

    <!-- setting activity-->
    <string name="txt_btn_choice">选择</string>
    <string name="txt_algorithm_name">算法名称：</string>
    <string name="txt_net_name">主干网络：</string>

    <!-- video detect activity -->
    <string name="txt_btn_choice_local_video">选择本地视频</string>
    <string name="txt_get_detect_result">检测</string>

    <!-- image detect activity -->
    <string name="txt_btn_choice_local_image">选择本地照片</string>
    <string name="txt_get_net_detect_result">网络检测</string>
    <string name="txt_get_local_detect_result">本地检测</string>

    <!-- button text -->
    <string name="txt_btn_real_time_video">实时检测</string>
    <string name="txt_btn_local_photo">本地照片检测</string>
    <string name="txt_btn_local_video">本地视频检测</string>
    <string name="txt_btn_net_photo">网络照片检测</string>
    <string name="txt_btn_net_video">网络视频检测</string>
    <string name="txt_btn_detect_result">历史检测结果</string>
    <string name="txt_btn_photo_detect">照片检测</string>
    <string name="txt_btn_video_detect">视频检测</string>
    <string name="txt_btn_setting">设置</string>


    <string name="image">图片</string>
    <string name="confirm">确定</string>
    <string name="preview">预览</string>
</resources>
